--- a/semana_1_machine_learning/dia_1_arboles_de_decision.ipynb
+++ b/semana_1_machine_learning/dia_1_arboles_de_decision.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Librerias / imports"
+    "# Librerías / imports"
    ]
   },
   {
