--- a/semana_1_machine_learning/dia_1_arboles_de_decision.ipynb
+++ b/semana_1_machine_learning/dia_1_arboles_de_decision.ipynb
@@ -3886,7 +3886,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos a separar la data en 2 conjuntos: uno para entrenar el modelo (train set) y otro para validar el modelo (validation set)."
+    "Vamos a separar la data en 2 conjuntos: uno para entrenar el modelo (**train set**) y otro para validar el modelo (**validation set**)."
    ]
   },
   {
@@ -3927,8 +3927,9 @@
     "* Entrenar un árbol de decisión con la data de entrenamiento.\n",
     "* Evaluar el resultado con la data de entrenamiento.\n",
     "* Evaluar el resultado con la data de validación.\n",
-    "\n",
-    "\\* Adicional: practicar visualizaciones con la data de test"
+    "* Ver la documentacion del metodo DecisionTreeClassifier, experimanto con distintos parámetros y observa los resultados.\n",
+    "  - ¿Qué parámetros te ayudan a incrementar la precisión?\n",
+    "  - ¿Cómo cambia la precisión en el conjunto de prueba?"
    ]
   },
   {
