haciendo similares los ejemplos de Regresión logística entre Keras y Tensorflow puro

--- a/semana_2_deep_learning/Dia1/01_linear_regression.ipynb
+++ b/semana_2_deep_learning/Dia1/01_linear_regression.ipynb
@@ -2230,9 +2230,9 @@
     }
    ],
    "source": [
-    "plt.plot(trX, trY, 'ro', label='Data')\n",
+    "plt.plot(trX, trY, 'ro', label='Datos originales')\n",
     "#plt.plot(trX, w_init*trX + b_init, label='init')\n",
-    "plt.plot(trX, w*trX + b, label='prediction')\n",
+    "plt.plot(trX, w*trX + b, label='Predicción')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
