--- a/semana_2_deep_learning/Dia1/logistic_regression.ipynb
+++ b/semana_2_deep_learning/Dia1/logistic_regression.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Logistic Regression Example\n",
     "\n",
-    "A logistic regression learning algorithm example using TensorFlow library.\n",
+    "A logistic regression learning algorithm example using TensorFlow library adapted from:\n",
     "\n",
     "- Author: Aymeric Damien\n",
     "- Project: https://github.com/aymericdamien/TensorFlow-Examples/"
@@ -30,18 +30,41 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+      "WARNING:tensorflow:From <ipython-input-1-c8f2c6a0ea7f>:5: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /home/gissella/anaconda2/envs/ml/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /home/gissella/anaconda2/envs/ml/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:252: _internal_retry.<locals>.wrap.<locals>.wrapped_fn (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use urllib or similar directly.\n",
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "WARNING:tensorflow:From /home/gissella/anaconda2/envs/ml/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "WARNING:tensorflow:From /home/gissella/anaconda2/envs/ml/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/gissella/anaconda2/envs/ml/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/gissella/anaconda2/envs/ml/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
      ]
     }
    ],
@@ -55,15 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
     "learning_rate = 0.01\n",
-    "training_epochs = 25\n",
+    "training_epochs = 100\n",
     "batch_size = 100\n",
     "display_step = 1\n",
     "\n",
@@ -89,32 +110,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost= 1.182138959\n",
-      "Epoch: 0002 cost= 0.664778162\n",
-      "Epoch: 0003 cost= 0.552686284\n",
-      "Epoch: 0004 cost= 0.498628905\n",
-      "Epoch: 0005 cost= 0.465469866\n",
-      "Epoch: 0006 cost= 0.442537872\n",
-      "Epoch: 0007 cost= 0.425462044\n",
-      "Epoch: 0008 cost= 0.412185303\n",
-      "Epoch: 0009 cost= 0.401311587\n",
-      "Epoch: 0010 cost= 0.392326203\n",
-      "Epoch: 0011 cost= 0.384736038\n",
-      "Epoch: 0012 cost= 0.378137191\n",
-      "Epoch: 0013 cost= 0.372363752\n",
-      "Epoch: 0014 cost= 0.367308579\n",
-      "Epoch: 0015 cost= 0.362704660\n",
-      "Epoch: 0016 cost= 0.358588599\n",
-      "Epoch: 0017 cost= 0.354823110\n"
+      "Epoch: 0001 cost= 1.184624003\n",
+      "Epoch: 0002 cost= 0.665495458\n",
+      "Epoch: 0003 cost= 0.552810819\n",
+      "Epoch: 0004 cost= 0.498693685\n",
+      "Epoch: 0005 cost= 0.465510637\n",
+      "Epoch: 0006 cost= 0.442554414\n",
+      "Epoch: 0007 cost= 0.425547585\n",
+      "Epoch: 0008 cost= 0.412176076\n",
+      "Epoch: 0009 cost= 0.401360596\n",
+      "Epoch: 0010 cost= 0.392407034\n",
+      "Epoch: 0011 cost= 0.384710853\n",
+      "Epoch: 0012 cost= 0.378217432\n",
+      "Epoch: 0013 cost= 0.372396226\n",
+      "Epoch: 0014 cost= 0.367283062\n",
+      "Epoch: 0015 cost= 0.362706514\n",
+      "Epoch: 0016 cost= 0.358544942\n",
+      "Epoch: 0017 cost= 0.354856002\n",
+      "Epoch: 0018 cost= 0.351438563\n",
+      "Epoch: 0019 cost= 0.348308686\n",
+      "Epoch: 0020 cost= 0.345407413\n",
+      "Epoch: 0021 cost= 0.342752677\n",
+      "Epoch: 0022 cost= 0.340242404\n",
+      "Epoch: 0023 cost= 0.337925441\n",
+      "Epoch: 0024 cost= 0.335778257\n",
+      "Epoch: 0025 cost= 0.333699180\n",
+      "Epoch: 0026 cost= 0.331808668\n",
+      "Epoch: 0027 cost= 0.329958513\n",
+      "Epoch: 0028 cost= 0.328229810\n",
+      "Epoch: 0029 cost= 0.326580615\n",
+      "Epoch: 0030 cost= 0.325033841\n",
+      "Epoch: 0031 cost= 0.323568297\n",
+      "Epoch: 0032 cost= 0.322079982\n",
+      "Epoch: 0033 cost= 0.320789614\n",
+      "Epoch: 0034 cost= 0.319508117\n",
+      "Epoch: 0035 cost= 0.318320547\n",
+      "Epoch: 0036 cost= 0.317147948\n",
+      "Epoch: 0037 cost= 0.316019805\n",
+      "Epoch: 0038 cost= 0.314901392\n",
+      "Epoch: 0039 cost= 0.313827929\n",
+      "Epoch: 0040 cost= 0.312839735\n",
+      "Epoch: 0041 cost= 0.311915494\n",
+      "Epoch: 0042 cost= 0.310932220\n",
+      "Epoch: 0043 cost= 0.310024123\n",
+      "Epoch: 0044 cost= 0.309195704\n",
+      "Epoch: 0045 cost= 0.308327007\n",
+      "Epoch: 0046 cost= 0.307499362\n",
+      "Epoch: 0047 cost= 0.306724913\n",
+      "Epoch: 0048 cost= 0.305979346\n",
+      "Epoch: 0049 cost= 0.305211856\n",
+      "Epoch: 0050 cost= 0.304483246\n",
+      "Epoch: 0051 cost= 0.303750246\n",
+      "Epoch: 0052 cost= 0.303058332\n",
+      "Epoch: 0053 cost= 0.302432092\n",
+      "Epoch: 0054 cost= 0.301795146\n",
+      "Epoch: 0055 cost= 0.301134932\n",
+      "Epoch: 0056 cost= 0.300555462\n",
+      "Epoch: 0057 cost= 0.299932182\n",
+      "Epoch: 0058 cost= 0.299359003\n",
+      "Epoch: 0059 cost= 0.298814332\n",
+      "Epoch: 0060 cost= 0.298212360\n",
+      "Epoch: 0061 cost= 0.297717871\n",
+      "Epoch: 0062 cost= 0.297195854\n",
+      "Epoch: 0063 cost= 0.296692402\n",
+      "Epoch: 0064 cost= 0.296165081\n",
+      "Epoch: 0065 cost= 0.295675405\n",
+      "Epoch: 0066 cost= 0.295171018\n",
+      "Epoch: 0067 cost= 0.294700711\n",
+      "Epoch: 0068 cost= 0.294245779\n",
+      "Epoch: 0069 cost= 0.293799076\n",
+      "Epoch: 0070 cost= 0.293366637\n",
+      "Epoch: 0071 cost= 0.292959763\n",
+      "Epoch: 0072 cost= 0.292502799\n",
+      "Epoch: 0073 cost= 0.292099379\n",
+      "Epoch: 0074 cost= 0.291683857\n",
+      "Epoch: 0075 cost= 0.291288449\n",
+      "Epoch: 0076 cost= 0.290884615\n",
+      "Epoch: 0077 cost= 0.290463643\n",
+      "Epoch: 0078 cost= 0.290123689\n",
+      "Epoch: 0079 cost= 0.289767045\n",
+      "Epoch: 0080 cost= 0.289405897\n",
+      "Epoch: 0081 cost= 0.288996901\n",
+      "Epoch: 0082 cost= 0.288730235\n",
+      "Epoch: 0083 cost= 0.288340170\n",
+      "Epoch: 0084 cost= 0.287988540\n",
+      "Epoch: 0085 cost= 0.287670233\n",
+      "Epoch: 0086 cost= 0.287326590\n",
+      "Epoch: 0087 cost= 0.287014427\n",
+      "Epoch: 0088 cost= 0.286691097\n",
+      "Epoch: 0089 cost= 0.286367625\n",
+      "Epoch: 0090 cost= 0.286038087\n",
+      "Epoch: 0091 cost= 0.285747716\n",
+      "Epoch: 0092 cost= 0.285471398\n",
+      "Epoch: 0093 cost= 0.285177326\n",
+      "Epoch: 0094 cost= 0.284891823\n",
+      "Epoch: 0095 cost= 0.284624325\n",
+      "Epoch: 0096 cost= 0.284340363\n",
+      "Epoch: 0097 cost= 0.284046996\n",
+      "Epoch: 0098 cost= 0.283731263\n",
+      "Epoch: 0099 cost= 0.283459093\n",
+      "Epoch: 0100 cost= 0.283237231\n",
+      "Optimization Finished!\n",
+      "Accuracy: 0.899\n"
      ]
     }
    ],
@@ -137,38 +241,45 @@
     "            avg_cost += c / total_batch\n",
     "        # Display logs per epoch step\n",
     "        if (epoch+1) % display_step == 0:\n",
-    "            print \"Epoch:\", '%04d' % (epoch+1), \"cost=\", \"{:.9f}\".format(avg_cost)\n",
+    "            print (\"Epoch:\", '%04d' % (epoch+1), \"cost=\", \"{:.9f}\".format(avg_cost))\n",
     "\n",
-    "    print \"Optimization Finished!\"\n",
+    "    print (\"Optimization Finished!\")\n",
     "\n",
     "    # Test model\n",
     "    correct_prediction = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))\n",
     "    # Calculate accuracy for 3000 examples\n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
-    "    print \"Accuracy:\", accuracy.eval({x: mnist.test.images[:3000], y: mnist.test.labels[:3000]})"
+    "    print (\"Accuracy:\", accuracy.eval({x: mnist.test.images[:3000], y: mnist.test.labels[:3000]}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python (ml)",
    "language": "python",
-   "name": "python2"
+   "name": "ml"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
