updates on printing

--- a/semana_2_deep_learning/Dia1/02_logistic_regression.ipynb
+++ b/semana_2_deep_learning/Dia1/02_logistic_regression.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,103 @@
       "Epoch 54/100\n",
       "60000/60000 [==============================] - 1s 9us/step - loss: 0.2650 - acc: 0.9267\n",
       "Epoch 55/100\n",
-      "  128/60000 [..............................] - ETA: 2s - loss: 0.2635 - acc: 0.9375"
+      "60000/60000 [==============================] - 1s 10us/step - loss: 0.2647 - acc: 0.9270\n",
+      "Epoch 56/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2643 - acc: 0.9270\n",
+      "Epoch 57/100\n",
+      "60000/60000 [==============================] - 1s 10us/step - loss: 0.2640 - acc: 0.9271\n",
+      "Epoch 58/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2636 - acc: 0.9270\n",
+      "Epoch 59/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2633 - acc: 0.9273\n",
+      "Epoch 60/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2630 - acc: 0.9273\n",
+      "Epoch 61/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2627 - acc: 0.9272\n",
+      "Epoch 62/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2624 - acc: 0.9275\n",
+      "Epoch 63/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2620 - acc: 0.9276\n",
+      "Epoch 64/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2618 - acc: 0.9276\n",
+      "Epoch 65/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2615 - acc: 0.9276\n",
+      "Epoch 66/100\n",
+      "60000/60000 [==============================] - 1s 8us/step - loss: 0.2613 - acc: 0.9278\n",
+      "Epoch 67/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2610 - acc: 0.9276\n",
+      "Epoch 68/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2607 - acc: 0.9277\n",
+      "Epoch 69/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2605 - acc: 0.9282\n",
+      "Epoch 70/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2602 - acc: 0.9283\n",
+      "Epoch 71/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2598 - acc: 0.9282\n",
+      "Epoch 72/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2597 - acc: 0.9280\n",
+      "Epoch 73/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2594 - acc: 0.9286\n",
+      "Epoch 74/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2592 - acc: 0.9285\n",
+      "Epoch 75/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2591 - acc: 0.9282\n",
+      "Epoch 76/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2588 - acc: 0.9286\n",
+      "Epoch 77/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2586 - acc: 0.9284\n",
+      "Epoch 78/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2583 - acc: 0.9289\n",
+      "Epoch 79/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2580 - acc: 0.9286\n",
+      "Epoch 80/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2578 - acc: 0.9290\n",
+      "Epoch 81/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2575 - acc: 0.9289\n",
+      "Epoch 82/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2573 - acc: 0.9292\n",
+      "Epoch 83/100\n",
+      "60000/60000 [==============================] - 0s 7us/step - loss: 0.2572 - acc: 0.9292\n",
+      "Epoch 84/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2571 - acc: 0.9293\n",
+      "Epoch 85/100\n",
+      "60000/60000 [==============================] - 1s 8us/step - loss: 0.2568 - acc: 0.9291\n",
+      "Epoch 86/100\n",
+      "60000/60000 [==============================] - 1s 10us/step - loss: 0.2565 - acc: 0.9292\n",
+      "Epoch 87/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2565 - acc: 0.9292\n",
+      "Epoch 88/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2562 - acc: 0.9291\n",
+      "Epoch 89/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2560 - acc: 0.9294\n",
+      "Epoch 90/100\n",
+      "60000/60000 [==============================] - 1s 8us/step - loss: 0.2558 - acc: 0.9298\n",
+      "Epoch 91/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2556 - acc: 0.9297\n",
+      "Epoch 92/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2554 - acc: 0.9296\n",
+      "Epoch 93/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2552 - acc: 0.9293\n",
+      "Epoch 94/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2550 - acc: 0.9301\n",
+      "Epoch 95/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2548 - acc: 0.9300\n",
+      "Epoch 96/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2547 - acc: 0.9299\n",
+      "Epoch 97/100\n",
+      "60000/60000 [==============================] - 1s 9us/step - loss: 0.2545 - acc: 0.9298\n",
+      "Epoch 98/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2543 - acc: 0.9297\n",
+      "Epoch 99/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2542 - acc: 0.9302\n",
+      "Epoch 100/100\n",
+      "60000/60000 [==============================] - 0s 8us/step - loss: 0.2541 - acc: 0.9301\n"
      ]
     }
    ],
@@ -244,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 0s     \n",
+      "10000/10000 [==============================] - 0s 9us/step\n",
       "Summary: Loss over the test dataset: 0.27, Accuracy: 0.93\n"
      ]
     }
@@ -261,6 +357,13 @@
     "evaluation = model.evaluate(X_test, Y_Test, verbose=1)\n",
     "print('Summary: Loss over the test dataset: %.2f, Accuracy: %.2f' % (evaluation[0], evaluation[1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
