--- a/semana_2_deep_learning/Dia2/05_Transfer_learning_solved.ipynb
+++ b/semana_2_deep_learning/Dia2/05_Transfer_learning_solved.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "Download http://download.tensorflow.org/example_images/flower_photos.tgz\n",
     "\n",
-    "> tar -xvzf flower_photos.tgz"
+    "`> tar -xvzf flower_photos.tgz`"
    ]
   },
   {
@@ -145,7 +145,7 @@
     }
    ],
    "source": [
-    "# Si querems El parámetro filenames, guarda la ruta de las imágenes\n",
+    "# Si queremos el nombre de los archivos, el parámetro filenames guarda la ruta de las imágenes\n",
     "train_generator.filenames[:3]"
    ]
   },
